--- a/final/index.html
+++ b/final/index.html
@@ -14,7 +14,7 @@
             <a href="./hours.html" target="_self">HOURS</a>
             <a href="./faq.html" target="_self">FAQ</a>
         </div>
-        <div style=" width: auto; height: 450px;">
+        <div style=" width: auto; height: 100%">
             <img src="./images/logo.png" style="width: 50px; height: 50px;" />
             <div class="hero">
                 <img src="./images/boat.png" style="width: 49%; height: 200px; padding: 0%; margin: 0%;">
@@ -23,21 +23,73 @@
             <div class="adres">
             <a href="https://www.google.com/maps?sca_esv=0ee965d81246b17d&sxsrf=AE3TifO36QQ-z1GbaS6KfRB3cbQK7w_w8w:1760688319024&kgmid=/g/11bxg5srwv&shndl=30&shem=lcuae,uaasie,shrtsdl&kgs=cc183ef719bcf8be&um=1&ie=UTF-8&fb=1&gl=tr&sa=X&geocode=KdGVurV23coUMe6VXIOulkz2&daddr=Postane,+%C3%96%C4%9F%C3%BCt+Sk.+No:1,+34940+Tuzla/%C4%B0stanbul">Buradan Adresimize Ulaşabilirsiniz</a>
             </div>
-            <h6>Tuzla'nın En İyi Balıkçısı</h6>
-            <blockquote>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur aliquet, felis non vulputate gravida, libero arcu sodales lectus, blandit eleifend risus diam ut nisl. Aenean velit quam, cursus tristique pellentesque quis, suscipit sit amet nibh. Nulla convallis placerat urna et facilisis. Cras porta sed enim vel porta. Curabitur lobortis iaculis.
-            </blockquote>
+<!--
+başlıklar: Ürün | Birim Fiyat | Stok
+
+satır1: Levrek | 250 ₺ | 24
+
+satır2: Çipura | 230 ₺ | 18
+
+satır3: Somon | 280 ₺ | 12
+*/
+-->
         </div>
+
+        <div class="content" style="background-color: #C3BA9E;">
+            <br><br><br>
+        <h6 style="color: #0B2B45;">
+            Tuzla'nın En İyi Balıkçısı
+        </h6>
+        <blockquote style="color: #0B2B45;">
+            <i>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur aliquet, felis non vulputate gravida, libero arcu sodales lectus, blandit eleifend risus diam ut nisl. Aenean velit quam, cursus tristique pellentesque quis, suscipit sit amet nibh. Nulla convallis placerat urna et facilisis. Cras porta sed enim vel porta. Curabitur lobortis iaculis.</i>
+        </blockquote>
+        <br><br><br>
+        <img class="food" src="./images/food.jpg" style="width: 210px; height: 150px;">
+        <table style="width: 120px;">
+            <br><br><br><br>
+            <caption style="color:darkgreen">Menü</caption>
+            <tr>
+                <td>
+                    <a href="#GununBaligi">Günün Balığı</a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="#TavaBaliklar">Tava Balıklar</a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="#DenizUrunleriAraSicak">Deniz Ürünleri (Ara Sıcak) </a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="#Mezeler">Mezeler</a>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <a href="#SogukIcecekler">Soğuk İçecekler</a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="#SicakIcecekler">Sıcak İçecekler</a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="#İcecekler">İçecekler</a>
+                </td>
+            </tr>
+        </table>
+    </div>
     </header>
     </body>
 </html>
 
-
-<!-- TODO: anchor linkler: intro, editors, basics, elements, headings, paragraphs, styles, formatting, quotations, comments, colors, css links, images -->
-<!-- TODO: burger menü butonu ekle ve aria-label/aria-expanded ayarla -->
-
-<!-- TODO: main etiketi aç -->
-<!-- TODO: hero bölümü oluştur -->
 <!-- TODO: <h1> başlık ekle -->
 <!-- TODO: tanıtım paragrafı yaz -->
 <!-- TODO: CTA buton ekle -->
@@ -53,7 +105,6 @@
 <!-- TODO: VS Code bilgisi ekle ve <abbr> kullan -->
 <!-- TODO: dış link (w3schools.com) ekle -->
 <!-- TODO: target="_blank" ve rel="noopener" kullan -->
-
 <!-- TODO: Basics bölümü oluştur -->
 <!-- TODO: en az 2 paragraf -->
 <!-- TODO: bir liste (ul/ol) -->
